--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 fastapi
-uvicorn
+uvicorn[standard]
 psycopg2-binary
-python-multipart
 cloudinary
 python-dotenv
+python-multipart
+
 
               
 
